--- a/Content/Index.css
+++ b/Content/Index.css
@@ -1,17 +1,21 @@
 ﻿* {
     list-style: none;
-    text-decoration: none;
-}
-
-html, body {
+    text-decoration: none; 
     margin: 0;
     padding: 0;
 }
 
 #AmayaLiu {
-    /*position:fixed;
+    /*margin-top:800px;*/
     width:100%;
+    height:2000px;
+    /*background:red;*/
+}
+
+#Dream {
+    /*width:100%;
     height:100%;*/
+    /*background:black;*/
 }
 
 /*底图背景*/
@@ -159,7 +163,8 @@ div#top {
 #IndexTime {
 position:fixed;
 font-size:12px;
-color:#ffd2ff;
+color:#f3cbff;
+/*text-shadow:3px 1px 2px #e1244e9e;*/
 width:15vw;
 height:3vh;
 line-height:3vh;
@@ -174,7 +179,8 @@ bottom:0;
     z-index: 9996;
     height: 50vh;
     width: 31vw;
-    margin: -37% 0 0 5%;
+    left:5%;
+    top:12%;
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
 }
@@ -271,18 +277,17 @@ bottom:0;
     /*display:none;*/
     width: 50px;
     height: 50px;
-    position: relative;
-    margin: 40% 0 0 85% !important;
+    position: absolute;
+    z-index:20000;
+    left:85%;
+    top:70%;
     opacity: 0.5;
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     animation: rotate infinite linear 5s;
-    margin: 10% auto;
     -webkit-animation: rotate infinite linear 5s;
-    margin: 10% auto;
     -moz-animation: rotate infinite linear 5s;
-    margin: 10% auto;
 }
 
 .rect {
@@ -355,13 +360,17 @@ bottom:0;
 }
 
 /*媒体查询*/
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 420px) {
+    #Dream {
+    
+    }
     .DreamA {
-        width:42vw;
-        height:48vh;
-        margin:-39% 0 0 28%;
-        /*border:1px solid red;*/
-        z-index:9999;
+    width: 42vw;
+    height: 48vh;
+    left:29%;
+    top:10px;
+    /*border: 1px solid red;*/
+    z-index: 9999;
     }
     .buttonBox {
         margin:1vh 1vw;
